standardized css and some fixes